# arkanoid2k18

./: .travis.yml  CMakeLists.txt  README.md  extract_assets.py
cmake/: assets.cmake  glm.cmake
include/: config.h.in
include/GL/: glcore.h
src/: assets.json  audio.cc  audio.hh  collisions.cc  collisions.hh  game.cc  game.conf  game.hh  glcore.c  journal.hh  level.cc  level.hh  levels.json  main.cc  openal_backend.inl  particle_emitter.cc  particle_emitter.hh  physics.cc  physics.hh  resources.cc  resources.hh  sdl_mixer_backend.inl  shader_uniform.inl  targa.cc  texture_format.inl  utils.hh  video.cc  video.hh  wave.cc
